[package]
name = "todoListBack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
